@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam roundcorner 10
skinparam packageStyle rectangle

header AgroTracker - Relatório Técnico
title Diagrama de Classes UML - Arquitetura Consolidada (Domain & Contracts)

package "Camada de Domínio (Entities)" #F9F9F9 {
  class User {
    +id: string
    +nome: string
    +email: string
    +senha: string
    +ativo: boolean
    +createdAt: Date
  }

  class Fazenda {
    +id: string
    +nome: string
    +localizacao: string
    +createdAt: Date
  }

  class FazendaMember {
    +id: string
    +fazendaId: string
    +userId: string
    +role: MemberRole
    +active: boolean
    +createdAt: Date
  }

  class Animal {
    +id: string
    +codigoIdentificacao: string
    +nome: string
    +raca: string
    +peso: number
    +fazendaId: string
    +dataNascimento: Date
    --
    +calcularIdade(): number
  }

  class Event {
    +id: string
    +animalId: string
    +fazendaId: string
    +type: EventType
    +description: string
    +date: Date
    +createdBy: string
  }

  class AuditLog {
    +id: string
    +userId: string
    +userName: string
    +fazendaId: string | null
    +entityType: string
    +entityId: string
    +action: string
    +before_state: object
    +after_state: object
    +changes: object[]
    +metadata: object
    +timestamp: Date
  }
}

package "Camada de Abstração (Contracts/Interfaces)" #E3F2FD {
  interface IUserRepository {
    +save(user: User): Promise<void>
    +findById(id: string): Promise<User?>
    +findByEmail(email: string): Promise<User?>
  }

  interface IFazendaRepository {
    +save(fazenda: Fazenda): Promise<Fazenda>
    +findAll(): Promise<Fazenda[]>
    +findById(id: string): Promise<Fazenda?>
    +update(fazenda: Fazenda): Promise<void>
  }

  interface IFazendaMemberRepository {
    +save(member: FazendaMember): Promise<void>
    +findByFazendaAndUser(fId, uId): Promise<FazendaMember?>
    +findAllByUser(userId): Promise<FazendaMember[]>
  }

  interface IAnimalRepository {
    +save(animal: Animal): Promise<Animal>
    +findAll(): Promise<Animal[]>
    +findById(id: string): Promise<Animal?>
    +findByFazenda(fazendaId): Promise<Animal[]>
    +update(animal: Animal): Promise<void>
    +delete(id: string): Promise<void>
  }

  interface IEventRepository {
    +save(event: Event): Promise<void>
    +findByAnimal(animalId): Promise<Event[]>
  }

  interface IAuditRepository {
    +save(log: AuditLog): Promise<void>
    +find(filters): Promise<AuditLog[]>
  }
}

' RELACIONAMENTOS (Associações)

User "1" -- "0..*" FazendaMember : possui participações >
Fazenda "1" -- "0..*" FazendaMember : possui equipe >

Fazenda "1" -- "0..*" Animal : possui rebanho >
Animal "1" -- "0..*" Event : gera histórico >

User "1" -- "0..*" AuditLog : realiza ações >
Animal "1" -- "0..*" AuditLog : monitorado por >
Fazenda "1" -- "0..*" AuditLog : auditada por >

' Inversão de Dependência (Implementação implícita via Repositories)
IUserRepository <.. User : abstração
IFazendaRepository <.. Fazenda : abstração
IAnimalRepository <.. Animal : abstração

@enduml
